2009-02-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Finish merging EventTargetNode up into Node.

        This also fixes a small recently introduced issue where EventListeners
        would not be removed from the document if they were attached to comment
        nodes outside of the documentElement.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.scons:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * bindings/js/JSEventTargetNodeCustom.cpp: Removed.
        * bindings/js/JSNodeCustom.cpp:
        (WebCore::JSNode::addEventListener):
        (WebCore::JSNode::removeEventListener):
        (WebCore::JSNode::pushEventHandlerScope):
        * bindings/scripts/CodeGenerator.pm:
        * dom/CharacterData.cpp:
        (WebCore::CharacterData::CharacterData):
        (WebCore::CharacterData::rendererIsNeeded):
        * dom/CharacterData.h:
        * dom/ContainerNode.cpp:
        (WebCore::ContainerNode::willRemove):
        (WebCore::ContainerNode::attach):
        (WebCore::ContainerNode::detach):
        (WebCore::ContainerNode::insertedIntoDocument):
        (WebCore::ContainerNode::removedFromDocument):
        (WebCore::ContainerNode::setFocus):
        (WebCore::ContainerNode::setActive):
        (WebCore::ContainerNode::setHovered):
        (WebCore::dispatchChildInsertionEvents):
        (WebCore::dispatchChildRemovalEvents):
        * dom/ContainerNode.h:
        (WebCore::ContainerNode::ContainerNode):
        * dom/Document.cpp:
        (WebCore::Document::removeAllEventListenersFromAllNodes):
        (WebCore::Document::removeAllDisconnectedNodeEventListeners):
        (WebCore::Document::setFocusedNode):
        * dom/EventTargetNode.cpp: Removed.
        * dom/EventTargetNode.h: Removed.
        * dom/Node.cpp:
        (WebCore::Node::scriptExecutionContext):
        (WebCore::Node::eventListeners):